--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "react-icons": "^3.7.0"
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.1",
     "gatsby-plugin-react-css-modules": "^3.13.0",
+    "history": "^5.0.1",
     "postcss": "^8.2.7",
     "postcss-scss": "^4.0.0",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "react-router-dom": "^5.3.0"
   },
   "keywords": [
     "gatsby"
