--- a/package.json
+++ b/package.json
@@ -28,13 +28,26 @@
     "react-icons": "^3.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@storybook/addon-a11y": "^6.3.11",
+    "@storybook/addon-actions": "^6.3.11",
+    "@storybook/addon-console": "^1.2.3",
+    "@storybook/addon-controls": "^6.3.11",
+    "@storybook/addon-essentials": "^6.3.11",
+    "@storybook/addon-links": "^6.3.11",
+    "@storybook/addon-viewport": "^6.3.11",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.3.11",
     "@types/react-router-dom": "^5.3.1",
+    "babel-loader": "^8.2.2",
     "gatsby-plugin-react-css-modules": "^3.13.0",
     "history": "^5.0.1",
     "postcss": "^8.2.7",
     "postcss-scss": "^4.0.0",
     "prettier": "^1.18.2",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "storybook-addon-designs": "^6.2.0",
+    "storybook-dark-mode": "^1.0.8"
   },
   "keywords": [
     "gatsby"
@@ -47,7 +60,9 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \"",
-    "type-check": "tsc -w"
+    "type-check": "tsc -w",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
