--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Pierre-Alexis Blond",
   "dependencies": {
     "@types/react-helmet": "^5.0.11",
+    "addon-screen-reader": "^1.8.6",
     "gatsby": "^2.15.34",
     "gatsby-image": "^2.2.25",
     "gatsby-plugin-manifest": "^2.2.21",
@@ -31,12 +32,15 @@
     "@babel/core": "^7.15.8",
     "@emotion/react": "^11.5.0",
     "@mui/material": "^5.0.4",
-    "@storybook/addon-a11y": "^6.3.11",
+    "@storybook/addon-a11y": "^6.3.12",
     "@storybook/addon-actions": "^6.3.11",
     "@storybook/addon-console": "^1.2.3",
     "@storybook/addon-controls": "^6.3.11",
     "@storybook/addon-essentials": "^6.3.11",
-    "@storybook/addon-links": "^6.3.11",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/addon-backgrounds": "^6.3.12",
+    "@storybook/addon-docs": "^6.3.12",
+    "@storybook/addon-storysource": "^6.3.12",
     "@storybook/addon-viewport": "^6.3.11",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.3.11",
